--- a/renovate.json
+++ b/renovate.json
@@ -7,6 +7,7 @@
   "minor": {
     "packageRules": [
       {
+        "packagePatterns": [".*"],
         "labels": [
           "dependencies",
           "automerge"
@@ -17,6 +18,7 @@
   "patch": {
     "packageRules": [
       {
+        "packagePatterns": [".*"],
         "labels": [
           "dependencies",
           "automerge"
