--- a/renovate.json
+++ b/renovate.json
@@ -22,7 +22,8 @@
         "labels": [
           "dependencies",
           "automerge"
-        ]
+        ],
+        "automerge": true
       }
     ]
   }
