--- a/renovate.json
+++ b/renovate.json
@@ -1,6 +1,7 @@
 {
   "extends": [
-    "config:base"
+    "config:base",
+    ":disableRateLimiting"
   ],
   "addLabels": ["renovatebot"],
   "major": {},
